--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
-# Configuration MongoDB Atlas (Cloud)
-MONGODB_URI=mongodb+srv://username:password@cluster0.example.mongodb.net/
+# Configuration MongoDB 
+# Pour une installation locale sur macOS/Linux/Windows
+MONGODB_URI=mongodb://localhost:27017
+# Pour MongoDB Atlas (Cloud)
+# MONGODB_URI=mongodb+srv://username:password@cluster0.example.mongodb.net/
 DB_NAME=gestion_etudiants
 
-# Configuration Redis
+# Configuration Redis (requis pour le fonctionnement de l'application)
+# Installation sur macOS: brew install redis && brew services start redis
+# Installation sur Ubuntu: sudo apt install redis-server && sudo systemctl start redis-server
+# Installation sur Windows: https://github.com/microsoftarchive/redis/releases
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
 # Sécurité
-SECRET_KEY=votre_cle_secrete_pour_les_jetons
+# Changez cette clé pour une valeur aléatoire unique
+SECRET_KEY=changer_cette_cle_par_une_valeur_aleatoire_complexe
 
 # Configuration email (pour les notifications)
+# Si NOTIFICATIONS_ACTIVES=false, les paramètres email sont ignorés
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=votre_email@gmail.com
+# Pour Gmail, utiliser un mot de passe d'application: https://support.google.com/accounts/answer/185833
 EMAIL_PASSWORD=votre_mot_de_passe_application
 NOTIFICATIONS_ACTIVES=false 
